Basic rename to GrabItAll

--- a/chrome/locale/en-US/downloadHelper.properties
+++ b/chrome/locale/en-US/downloadHelper.properties
@@ -1,4 +1,4 @@
-dia-regular=DownItAll!
-dia-regular-desc=Download with DownItAll!
+dia-regular=GrabItAll!
+dia-regular-desc=Download with GrabItAll!
 dia-turbo=DiA! OneClick
-dia-turbo-desc=Download with DownItAll! OneClick
+dia-turbo-desc=Download with GrabItAll! OneClick
