--- a/chrome/locale/en-US/manager.dtd
+++ b/chrome/locale/en-US/manager.dtd
@@ -1,5 +1,5 @@
 <!ENTITY tooladddownload.label "Add Downloads">
-<!ENTITY tooladd.tooltip "Manually add a download to DownItAll">
+<!ENTITY tooladd.tooltip "Manually add a download to GrabItAll">
 
 <!ENTITY movetop.label "Top">
 <!ENTITY movebottom.label "Bottom">
