--- a/chrome/locale/en-US/manager.properties
+++ b/chrome/locale/en-US/manager.properties
@@ -4,17 +4,17 @@ moving=Moving
 # LOCALIZATION NOTE(currentdownloadstats): number complete, number total, number running
 currentdownloadstats=%S of %S (%S), %S running
 # LOCALIZATION NOTE(titlespeed): Percent complete, speed, number complete, number total
-titlespeed=%S - %S - %S/%S - DownItAll!
+titlespeed=%S - %S - %S/%S - GrabItAll!
 # LOCALIZATION NOTE(titlespeedfiltered): Percent complete, speed, number complete, number filtered, number total
-titlespeedfiltered=%S - %S - %S/%S (%S) - DownItAll!
+titlespeedfiltered=%S - %S - %S/%S (%S) - GrabItAll!
 # LOCALIZATION NOTE(titleidle): number complete, number total
-titleidle=%S/%S - DownItAll!
+titleidle=%S/%S - GrabItAll!
 # LOCALIZATION NOTE(titleidlefiltered): number complete, number filtered, number complete
-titleidlefiltered=%S/%S (%S) - DownItAll!
+titleidlefiltered=%S/%S (%S) - GrabItAll!
 # LOCALIZATION NOTE(transfered): bytes transferred, bytes total
 transfered=%S of %S
 timeout=Timeout Error
-suc=DownItAll has completed all the tasks.
+suc=GrabItAll has completed all the tasks.
 suc.title=All Downloads Complete!
 openfolder=Do you want to browse last download folder?
 starting=Starting
@@ -50,7 +50,7 @@ errmismatchtitle=Size mismatch
 # LOCALIZATION NOTE(errmismatchtext): Both %S are byte sizes
 errmismatchtext=Actual size of %S does not match reported size of %S
 downloading=Downloading
-confclose.2=Want to close DownItAll!?
+confclose.2=Want to close GrabItAll!?
 nonresclose=DiA is currently downloading non-resumable files.\nIf you close DiA now, you will have to re-download the files from the beginning!\n\nAbort downloads and close?
 privateclose=DiA currently has private downloads queued.\nClosing at this point cancel all private downloads and remove the corresponding incomplete files!\n\nAbort private downloads and close?
 freespace.title=Not Enough Free Space!
@@ -61,11 +61,11 @@ accesserror=File access error
 accesserror.long=File access was denied. Could not create a directory or file in the download directory. Please check your file permissions or change the download directory.
 temp.notdir=The temporary location is not a directory. Using the download directory to store files for now. Please fix this in the preferences.
 temp.notaccessible=The temporary directory is not readable or writable. Using the download directory to store files for now. Please fix this in the preferences.
-temp.warnnnonerecommended=It is recommended not to specify a temporary directory at all, and just have DownItAll! store temporary files in the download directory. Use recommended behavior?
+temp.warnnnonerecommended=It is recommended not to specify a temporary directory at all, and just have GrabItAll! store temporary files in the download directory. Use recommended behavior?
 autofix=Fix problem
 manualfix3=Fix manually…
 unknownerror=Unknown error
-unknownerror.text=Unknown error occurred, likely a bug in DownItAll!
+unknownerror.text=Unknown error occurred, likely a bug in GrabItAll!
 cancel.title=Cancel Selected Downloads
 canceltext=Are you sure to cancel selected download?
 cancelmanytext=Are you sure to cancel selected downloads?
