--- a/chrome/locale/en-US/menu.properties
+++ b/chrome/locale/en-US/menu.properties
@@ -1,11 +1,11 @@
-error=DownItAll! - Error
+error=GrabItAll! - Error
 error.nolinks=No links or pictures found!
 queuedn=Queued %S items
 queued=Queued %S
-error.information=DownItAll! was unable to proceed!\nEither there were no links selected to download, or information like download folder is missing.
+error.information=GrabItAll! was unable to proceed!\nEither there were no links selected to download, or information like download folder is missing.
 errorcannotdownload=The selected link is not a file DiA knows how to download!
 morediatools=More DiA Tools
-simplediatools=DownItAll! Tools
+simplediatools=GrabItAll! Tools
 sniffedvideo=Sniffed Video
 preparing.label=Preparing links…
 processing.label=Processing pages. %S links and %S images so far…
